# oop2-project-legends4life

./: CMakeLists.txt  README.md
include/: Macros.h  Resources.h
include/buttons/: Button.h  ChooseCharecterButton.h  ChooseLevelButton.h  MiniMapButton.h  PageButton.h  SoundButtons.h  StateButton.h
include/gameManage/: Animation.h  Audio.h  CheckPoint.h  CollisionHandler.h  CollisionListener.h  Controller.h  DataManagement.h  DebugDraw.h  Direction.h  Factory.h  GameObject.h  HashHandler.h  LevelLoader.h
include/gui/: CameraView.h  LifeStatusBar.h  MiniMap.h  PlayerStatus.h
include/movingObject/: Enemy.h  FallingBlock.h  GuillotineTrap.h  MagicEffect.h  MovingObject.h  MovingPlatform.h  Player.h  Trap.h
include/state/: BaseMenuState.h  ChooseCharecterState.h  ChooseLevelState.h  GameState.h  InstructionsState.h  LeadboardState.h  LoadingState.h  MainMenuState.h  SettingsState.h  State.h  StateController.h  VictoryAndDefeatState.h
include/staticObjects/: Bonus.h  BonusCoin.h  BonusLive.h  BonusMagicEffect.h  BonusSpeed.h  Box.h  GoneTile.h  Ground.h  MineTrap.h  Platform.h  StaticAnimation.h  StaticObject.h  StaticObjectAnimation.h  WaterTrap.h  WinGate.h
readmeImages/: CMakeLists.txt
resources/: CMakeLists.txt  Leadboard.txt
resources/Level1/: Level1.txt
resources/Level2/: Level2.txt
resources/Level3/: Level3.txt
src/: CMakeLists.txt  Resources.cpp  main.cpp
src/buttons/: Button.cpp  ChooseCharecterButton.cpp  ChooseLevelButton.cpp  MiniMapButton.cpp  SoundButtons.cpp
src/gameManage/: Animation.cpp  Audio.cpp  CheckPoint.cpp  CollisionHandler.cpp  CollisionListener.cpp  Controller.cpp  DataManagement.cpp  Direction.cpp  GameObject.cpp  LevelLoader.cpp
src/gui/: CameraView.cpp  LifeStatusBar.cpp  MiniMap.cpp  PlayerStatus.cpp
src/movingObject/: Enemy.cpp  FallingBlock.cpp  GuillotineTrap.cpp  MagicEffect.cpp  MovingObject.cpp  MovingPlatform.cpp  Player.cpp  Trap.cpp
src/state/: BaseMenuState.cpp  ChooseCharecterState.cpp  ChooseLevelState.cpp  GameState.cpp  InstructionsState.cpp  LeadboardState.cpp  LoadingState.cpp  MainMenuState.cpp  SettingsState.cpp  State.cpp  StateController.cpp  VictoryAndDefeatState.cpp
src/staticObjects/: Bonus.cpp  BonusCoin.cpp  BonusLive.cpp  BonusMagicEffect.cpp  BonusSpeed.cpp  Box.cpp  GoneTile.cpp  Ground.cpp  MineTrap.cpp  Platform.cpp  StaticAnimation.cpp  StaticObject.cpp  StaticObjectAnimation.cpp  WaterTrap.cpp  WinGate.cpp
